[gd_scene load_steps=3 format=3 uid="uid://brb47xgf4juex"]

[ext_resource type="Script" path="res://addons/resource_tracker/resource_tracker_panel.gd" id="1_recoy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u0lyc"]

[node name="ResourceTrackerPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_recoy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Resource Tracker"

[node name="LabelInfo" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "(remember to compile with -t for enabling it)"

[node name="HSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Filter by:
"

[node name="OptionBox_Filter" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 8
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Started"
popup/item_1/id = 1
popup/item_2/text = "Downloading"
popup/item_2/id = 2
popup/item_3/text = "Downloaded"
popup/item_3/id = 3
popup/item_4/text = "Loading"
popup/item_4/id = 4
popup/item_5/text = "Failed"
popup/item_5/id = 5
popup/item_6/text = "Finished"
popup/item_6/id = 6
popup/item_7/text = "Deleted"
popup/item_7/id = 7

[node name="HSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_u0lyc")

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Speed:"

[node name="Label_Speed" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0mb/s"

[node name="Tree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 6
column_titles_visible = true
allow_rmb_select = true
hide_root = true

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/OptionBox_Filter" to="." method="_on_option_box_filter_item_selected"]
[connection signal="item_mouse_selected" from="VBoxContainer/Tree" to="." method="_on_tree_item_mouse_selected"]
